--- a/index.html
+++ b/index.html
@@ -1,14 +1,136 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-    <h1>Hello World</h1>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="style.css">
+    <title>Chapelaria Clermont</title>
+  </head>
+
+  <body>
+    <header>
+
+      <!--TOP NAV BAR-->
+     <div class="topnav">
+       <a class="active" href="#home">HOME</a>
+       <a href="#about">ABOUT</a>
+       <a href="#shop">SHOP</a>
+       <a href="#contacts">CONTACTS</a>
+     </div>
+     
+   </header>
 
 
-</body>
+  <br>
+  <br>
+
+  <section>
+    <div class="container">
+        <img src="logo.png" alt="Hats" style="width:100%">
+      </div>
+    </section>  
+  
+    <br>
+    <br>
+    <br>
+
+
+    <button class="btn">SHOP NOW</button>
+
+    <br>
+    <br>
+    <br>
+
+    <section class="imagem">
+    <div class="container">
+        <img src="img6.jpg" alt="Hats" style="width:100%">
+
+      </div>
+    </section>  
+
+    <br>
+    <br>
+
+    <h4>- SINCE 1997 -</h4>
+    <p> Hats are very cool. You should buy hats from us because we are cool too. I have no idea what I'm doing but oh well. Did I tell you that hats are cool yet?</p>
+  
+
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img1.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img4.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img2.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <h3>NEW ARRIVALS</h3>   
+
+    <br>
+
+    <div class="card-deck">
+        <div class="card">
+          <img src="img7.jpg" class="card-img-top" alt="Stetson Hats">
+          <div class="card-body">
+            <h5 class="card-title">Stetson Model</h5>
+          </div>
+        </div>
+        <div class="card">
+          <img src="img8.jpg" class="card-img-top" alt="Beret Hats">
+          <div class="card-body">
+            <h5 class="card-title">Beret Model</h5>
+          </div>
+        </div>
+        <div class="card">
+          <img src="img5.jpg" class="card-img-top" alt="Bailey Hats">
+          <div class="card-body">
+            <h5 class="card-title">Bailey Model</h5>
+          </div>
+        </div>
+    </div>
+
+
+    <br>
+    <br>
+    <br>
+  
+<footer> 
+  <br>
+    <p> <b>CHAPELARIA CLERMONT </b> <br> Main Street, nº1 Lisbon - Portugal <br> chapelariaclermont@example.com <br> +351 219888888</p>
+  
+    <hr>
+
+    <p class="paragrafoFooter">Copyright © 2020 Chapelaria Clermont. All Rights Reserved.</p>
+</footer>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  </body>
 </html>
